--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.1",
+    "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.0.0",
     "@typegoose/typegoose": "^9.9.0",
     "bcryptjs": "^2.4.3",
@@ -32,6 +33,8 @@
     "class-validator": "^0.13.2",
     "mongoose": "^6.3.8",
     "nestjs-typegoose": "^7.1.38",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -45,6 +48,7 @@
     "@types/jest": "27.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
