--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Start MongoDB
-      uses: supercharge/mongodb-github-action@1.7.0
-      with:
-        mongodb-version: ${{ matrix.mongodb-version }}
-        mongodb-port: 27020
+    # - name: Start MongoDB
+    #   uses: supercharge/mongodb-github-action@1.7.0
+    #   with:
+    #     mongodb-version: ${{ matrix.mongodb-version }}
+    #     mongodb-port: 27020
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
