--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,16 @@ services:
     volumes:
       - ./mongo-data-4.4:/data/db
     command: --wiredTigerCacheSizeGB 1.5
+  test-mongo-db:
+    image: mongo:4.4.4
+    container_name: mongo-test
+    restart: always
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admintest
+      - MONGO_INITDB_ROOT_PASSWORD=admintest
+      - MONGO_AUTHDATABASE=admintest
+    ports:
+      - 27025:27017
+    volumes:
+      - ./mongo-data-4.4:/data/db
+    command: --wiredTigerCacheSizeGB 1.5
