--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
 		"@nestjs/passport": "^8.2.2",
 		"@nestjs/platform-express": "^7.5.5",
 		"@typegoose/typegoose": "^9.9.0",
+		"@types/app-root-path": "^1.2.4",
+		"app-root-path": "^3.1.0",
 		"bcryptjs": "^2.4.3",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
 		"cross-env": "^7.0.3",
+		"date-fns": "^2.29.2",
+		"fs-extra": "^10.1.0",
 		"mongoose": "^6.3.8",
 		"nest-typed-config": "^2.4.2",
 		"nestjs-typegoose": "^7.1.38",
@@ -48,8 +52,10 @@
 		"@nestjs/testing": "^8.4.7",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/express": "^4.17.13",
+		"@types/fs-extra": "^9.0.13",
 		"@types/jest": "27.0.2",
 		"@types/mongoose": "^5.11.97",
+		"@types/multer": "^1.4.7",
 		"@types/node": "^16.0.0",
 		"@types/passport-jwt": "^3.0.6",
 		"@types/supertest": "^2.0.11",
